- Fix sorting in list view - Human readable time in announcment list - Subtile color for completed interface invocations

--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,15 @@ tr.notification td:empty {
 }
 
 tr.announcement {
-	background:#aaf;
+	background:#eee;
 }
 
 tr.announcement td:empty {
 	background:white;
+}
+
+tr.running {
+	background:#AAF;
 }
 
 tr.error {
